test/deca/syntax/invalid/ifthenelse_elseif_no_condition.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 10 : Erreur (manque condition du else if)

{
    if (true) {
    
    } else if {

    }
}